--- a/views/header.ejs
+++ b/views/header.ejs
@@ -40,10 +40,10 @@
                                                       <h4 class="title">Jewellery </h4>
                                                       <ul class="listitem-list">
                                                           <li>
-                                                              <a href="shop.html" target="_self">Rings </a>
+                                                              <a href="/shop" target="_self">Rings </a>
                                                           </li>
                                                           <li>
-                                                              <a href="shop-list.html" target="_self">
+                                                              <a href="/shop" target="_self">
                                                                   <!-- <span class="image">
                                                                       <img src="/assets/images/label-new.jpg"
                                                                            class="attachment-full size-full"
@@ -53,7 +53,7 @@
                                                               </a>
                                                           </li>
                                                           <li>
-                                                              <a href="shop.html" target="_self">Necklaces </a>
+                                                              <a href="/shop" target="_self">Necklaces </a>
                                                           </li>
                                                           
                                                       </ul>
@@ -64,26 +64,26 @@
                                                       <h4 class="title">Crystals </h4>
                                                       <ul class="listitem-list">
                                                           <li>
-                                                              <a href="single-product.html" target="_self"> Clusters </a>
+                                                              <a href="/shop" target="_self"> Clusters </a>
                                                           </li>
                                                           <li>
-                                                              <a href="single-product-policy.html" target="_self"> Tumbles </a>
+                                                              <a href="/shop" target="_self"> Tumbles </a>
                                                           </li>
                                                           <li>
-                                                              <a href="single-product-rightsidebar.html" target="_self"> Raw Form </a>
+                                                              <a href="/shop" target="_self"> Raw Form </a>
                                                           </li>
                                                           <li>
-                                                              <a href="single-product-leftsidebar.html" target="_self"> Tower/wands </a>
+                                                              <a href="/shop" target="_self"> Tower/wands </a>
                                                           </li>
                                                           <li>
-                                                            <a href="single-product-leftsidebar.html" target="_self"> Sphere </a>
+                                                            <a href="/shop" target="_self"> Sphere </a>
                                                         </li>
                                                         <li>
-                                                            <a href="single-product-leftsidebar.html" target="_self"> Roller/Guasha
+                                                            <a href="/shop" target="_self"> Roller/Guasha
                                                             </a>
                                                         </li>
                                                         <li>
-                                                            <a href="single-product-leftsidebar.html" target="_self"> Free Form
+                                                            <a href="/shop" target="_self"> Free Form
                                                             </a>
                                                         </li>
                                                       </ul>
@@ -100,15 +100,15 @@
                                                         Apothecary </h4>
                                                       <ul class="listitem-list">
                                                           <li>
-                                                              <a href="single-product-simple.html" target="_self"> Herbs & Smudging
+                                                              <a href="/shop" target="_self"> Herbs & Smudging
                                                             </a>
                                                           </li>
                                                           <li>
-                                                              <a href="single-product.html" target="_self"> Candles
+                                                              <a href="/shop" target="_self"> Candles
                                                             </a>
                                                           </li>
                                                           <li>
-                                                              <a href="single-product-external.html" target="_self"> Detox Bath
+                                                              <a href="/shop" target="_self"> Detox Bath
                                                             </a>
                                                           </li>
                                                           
@@ -227,7 +227,7 @@
                               </div>
                               <div class="block-minicart block-dreaming kaycee-mini-cart kaycee-dropdown">
                                   <div class="shopcart-dropdown block-cart-link" data-kaycee="kaycee-dropdown">
-                                      <a class="block-link link-dropdown" href="cart.html">
+                                      <a class="block-link link-dropdown" href="/">
                                           <span class="flaticon-shopping-bag-1"></span>
                                           <span class="count">3</span>
                                       </a>
@@ -378,7 +378,7 @@
                   </div>
                   <div class="block-minicart block-dreaming kaycee-mini-cart kaycee-dropdown">
                       <div class="shopcart-dropdown block-cart-link" data-kaycee="kaycee-dropdown">
-                          <a class="block-link link-dropdown" href="cart.html">
+                          <a class="block-link link-dropdown" href="#">
                               <span class="flaticon-shopping-bag-1"></span>
                               <span class="count">3</span>
                           </a>
@@ -426,8 +426,8 @@
                                           class="kaycee-Price-currencySymbol">$</span>418.00</span>
                               </p>
                               <p class="kaycee-mini-cart__buttons buttons">
-                                  <a href="cart.html" class="button kaycee-forward">Viewcart</a>
-                                  <a href="checkout.html" class="button checkout kaycee-forward">Checkout</a>
+                                  <a href="#" class="button kaycee-forward">Viewcart</a>
+                                  <a href="#" class="button checkout kaycee-forward">Checkout</a>
                               </p>
                           </div>
                       </div>
