--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,15 +4,7 @@
           <div class="header-middle">
               <div class="kaycee-menu-wapper"></div>
               <div class="header-middle-inner">
-                  <div class="header-search-menu">
-                      <div class="block-menu-bar">
-                          <a class="menu-bar menu-toggle" href="#">
-                              <span></span>
-                              <span></span>
-                              <span></span>
-                          </a>
-                      </div>
-                  </div>
+                  
                   <div class="header-logo-nav">
                       <div class="header-logo">
                           <a href="/" style="font-size: 36px; font-weight: 800;">
@@ -30,7 +22,7 @@
                               <li id="menu-item-228"
                                   class="menu-item menu-item-type-post_type menu-item-object-megamenu menu-item-228 parent parent-megamenu item-megamenu menu-item-has-children">
                                   <a class="kaycee-menu-item-title" title="Shop"
-                                     href="/shop">Shop</a>
+                                     href="#">Shop</a>
                                   <span class="toggle-submenu"></span>
                                   <div class="submenu megamenu megamenu-blog">
                                       <div class="row">
@@ -40,10 +32,10 @@
                                                       <h4 class="title">Jewellery </h4>
                                                       <ul class="listitem-list">
                                                           <li>
-                                                              <a href="/shop" target="_self">Rings </a>
+                                                              <a href="/shop/rings" target="_self">Rings </a>
                                                           </li>
                                                           <li>
-                                                              <a href="/shop" target="_self">
+                                                              <a href="/shop/bracelets" target="_self">
                                                                   <!-- <span class="image">
                                                                       <img src="/assets/images/label-new.jpg"
                                                                            class="attachment-full size-full"
@@ -53,7 +45,7 @@
                                                               </a>
                                                           </li>
                                                           <li>
-                                                              <a href="/shop" target="_self">Necklaces </a>
+                                                              <a href="/shop/necklaces" target="_self">Necklaces </a>
                                                           </li>
                                                           
                                                       </ul>
@@ -170,120 +162,69 @@
                       <div class="header-control-inner">
                           <div class="meta-dreaming">
                               
-                              <div class="header-search kaycee-dropdown">
-                                  <div class="header-search-inner" data-kaycee="kaycee-dropdown">
-                                      <a href="#" class="link-dropdown block-link">
-                                          <span class="flaticon-magnifying-glass-1"></span>
-                                      </a>
-                                  </div>
-                                  <div class="block-search">
-                                      <form role="search" method="get"
-                                            class="form-search block-search-form kaycee-live-search-form">
-                                          <div class="form-content search-box results-search">
-                                              <div class="inner">
-                                                  <input autocomplete="off" class="searchfield txt-livesearch input"
-                                                         name="s" value="" placeholder="Search here..." type="text">
-                                              </div>
-                                          </div>
-                                          <input name="post_type" value="product" type="hidden">
-                                          <input name="taxonomy" value="product_cat" type="hidden">
-                                          <div class="category">
-                                              <select title="product_cat" name="product_cat" id="64788262"
-                                                      class="category-search-option"
-                                                      tabindex="-1" style="display: none;">
-                                                  <option value="0">All Categories</option>
-                                                  <option class="level-0" value="light">Earrings</option>
-                                                  <option class="level-0" value="chair">Pendants</option>
-                                                  <option class="level-0" value="table">Bangles</option>
-                                                  <option class="level-0" value="bed">Finger Rings</option>
-                                                  <option class="level-0" value="new-arrivals">New arrivals</option>
-                                                  <option class="level-0" value="lamp">Chains</option>
-                                                  <option class="level-0" value="specials">Neckwear</option>
-                                                  <option class="level-0" value="sofas">Bracelets</option>
-                                              </select>
-                                          </div>
-                                          <button type="submit" class="btn-submit">
-                                              <span class="flaticon-magnifying-glass-1"></span>
-                                          </button>
-                                      </form><!-- block search -->
-                                  </div>
-                              </div>
-                              <div class="kaycee-dropdown-close">x</div>
-                              <div class="menu-item block-user block-dreaming kaycee-dropdown">
-                                  <a class="block-link" href="my-account.html">
-                                      <span class="flaticon-profile"></span>
-                                  </a>
-                                  <ul class="sub-menu">
-                                      <li class="menu-item kaycee-MyAccount-navigation-link kaycee-MyAccount-navigation-link--dashboard is-active">
-                                          <a href="#">Dashboard</a>
-                                      </li>
-                                      <li class="menu-item kaycee-MyAccount-navigation-link kaycee-MyAccount-navigation-link--orders">
-                                          <a href="#">Orders</a>
-                                      </li>
-                                      <li class="menu-item kaycee-MyAccount-navigation-link kaycee-MyAccount-navigation-link--customer-logout">
-                                          <a href="#">Logout</a>
-                                      </li>
-                                  </ul>
-                              </div>
+                              
+                              <% if (user) { %>
+                                <div class="menu-item block-user block-dreaming kaycee-dropdown">
+                                    <a class="block-link" href="/dashboard">
+                                        <span class="flaticon-profile"></span>
+                                    </a>
+                                    <ul class="sub-menu">
+                                        <li class="menu-item kaycee-MyAccount-navigation-link kaycee-MyAccount-navigation-link--dashboard is-active">
+                                            <a href="#">Dashboard</a>
+                                        </li>
+                                        <!-- <li class="menu-item kaycee-MyAccount-navigation-link kaycee-MyAccount-navigation-link--orders">
+                                            <a href="#">Order Status</a>
+                                        </li> -->
+                                        <li class="menu-item kaycee-MyAccount-navigation-link kaycee-MyAccount-navigation-link--customer-logout">
+                                            <a href="#">Logout</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                              <% } %>
+                              
+                              <% if (cart) { %>
+                               
+                              
                               <div class="block-minicart block-dreaming kaycee-mini-cart kaycee-dropdown">
                                   <div class="shopcart-dropdown block-cart-link" data-kaycee="kaycee-dropdown">
                                       <a class="block-link link-dropdown" href="/">
                                           <span class="flaticon-shopping-bag-1"></span>
-                                          <span class="count">3</span>
+                                          <span class="count"><%= cart.length %></span>
                                       </a>
                                   </div>
                                   <div class="widget kaycee widget_shopping_cart">
                                       <div class="widget_shopping_cart_content">
                                           <h3 class="minicart-title">Your Cart<span
-                                                  class="minicart-number-items">3</span></h3>
+                                                  class="minicart-number-items"><%= cart.length %></span></h3>
                                           <ul class="kaycee-mini-cart cart_list product_list_widget">
-                                              <li class="kaycee-mini-cart-item mini_cart_item">
-                                                  <a href="#" class="remove remove_from_cart_button">×</a>
-                                                  <a href="#">
-                                                      <img src="/assets/images/apro134-1-600x778.jpg"
-                                                           class="attachment-kaycee_thumbnail size-kaycee_thumbnail"
-                                                           alt="img" width="600" height="778">T-shirt with skirt –
-                                                      Pink&nbsp;
-                                                  </a>
-                                                  <span class="quantity">1 × <span
-                                                          class="kaycee-Price-amount amount"><span
-                                                          class="kaycee-Price-currencySymbol">$</span>150.00</span></span>
-                                              </li>
-                                              <li class="kaycee-mini-cart-item mini_cart_item">
-                                                  <a href="#" class="remove remove_from_cart_button">×</a>
-                                                  <a href="#">
-                                                      <img src="/assets/images/apro1113-600x778.jpg"
-                                                           class="attachment-kaycee_thumbnail size-kaycee_thumbnail"
-                                                           alt="img" width="600" height="778">Ethereal Earrings&nbsp;
-                                                  </a>
-                                                  <span class="quantity">1 × <span
-                                                          class="kaycee-Price-amount amount"><span
-                                                          class="kaycee-Price-currencySymbol">$</span>129.00</span></span>
-                                              </li>
-                                              <li class="kaycee-mini-cart-item mini_cart_item">
-                                                  <a href="#" class="remove remove_from_cart_button">×</a>
-                                                  <a href="#">
-                                                      <img src="/assets/images/apro201-1-600x778.jpg"
-                                                           class="attachment-kaycee_thumbnail size-kaycee_thumbnail"
-                                                           alt="img" width="600" height="778">Riona Pearl&nbsp;
-                                                  </a>
-                                                  <span class="quantity">1 × <span
-                                                          class="kaycee-Price-amount amount"><span
-                                                          class="kaycee-Price-currencySymbol">$</span>139.00</span></span>
-                                              </li>
+                                            <% let sum =0 %>
+                                              <% cart.forEach(item => { sum+= item.discountedPrice%>
+                                                <li class="kaycee-mini-cart-item mini_cart_item">
+                                                    <a href="#"  data-productId="<%= item._id %>" class="remove remove_from_cart_button remove-from-cart-header">×</a>
+                                                    <a href="/product/<%= item._id %>">
+                                                        <img src="/assets/images/apro134-1-600x778.jpg"
+                                                             class="attachment-kaycee_thumbnail size-kaycee_thumbnail"
+                                                             alt="img" width="600" height="778"><%= item.name %>&nbsp;
+                                                    </a>
+                                                    <span class="quantity">1 × <span
+                                                            class="kaycee-Price-amount amount"><span
+                                                            class="kaycee-Price-currencySymbol">Rs</span><%= item.discountedPrice %></span></span>
+                                                </li>
+                                              <% }) %>
                                           </ul>
                                           <p class="kaycee-mini-cart__total total"><strong>Subtotal:</strong>
                                               <span class="kaycee-Price-amount amount"><span
-                                                      class="kaycee-Price-currencySymbol">$</span>418.00</span>
+                                                      class="kaycee-Price-currencySymbol">Rs</span><%= sum %></span>
                                           </p>
                                           <p class="kaycee-mini-cart__buttons buttons">
-                                              <a href="cart.html" class="button kaycee-forward">Viewcart</a>
-                                              <a href="checkout.html"
+                                              <a href="/cart" class="button kaycee-forward">Viewcart</a>
+                                              <a href="/checkout"
                                                  class="button checkout kaycee-forward">Checkout</a>
                                           </p>
                                       </div>
                                   </div>
                               </div>
+                              <% } %>
                           </div>
                       </div>
                   </div>
@@ -437,3 +378,32 @@
       </div>
   </div>
 </header>
+<script src="/assets/js/jquery-1.12.4.min.js"></script>
+<script>
+$(document).ready(function() {
+  // Add a click event handler to the "Remove from Cart" link
+  $(".remove-from-cart-header").on("click", function(event) {
+    event.preventDefault(); // Prevent the default behavior of the anchor tag
+    
+    // Get the data-productId attribute value
+    var productId = $(this).data("productId");
+    
+    // Create a data object to send as JSON
+    var requestData = {
+      productId: productId
+    };
+    
+    // Send an AJAX POST request
+    $.ajax({
+      type: "POST",
+      url: "/api/remove-from-cart",
+      data: JSON.stringify(requestData),
+      contentType: "application/json",
+      success: function(response) {
+        location.reload();
+      },
+    
+    });
+  });
+});
+</script>
