--- a/views/dashboard/header.ejs
+++ b/views/dashboard/header.ejs
@@ -11,7 +11,7 @@
       <ul class="navbar-nav quick-links d-none d-lg-flex">
        
         <li class="nav-item dropdown-hover d-none d-lg-block">
-          <a class="nav-link" href="app-chat.html">Chat</a>
+          <a class="nav-link" href="/">Website</a>
         </li>
        
       </ul>
