--- a/views/header.ejs
+++ b/views/header.ejs
@@ -170,7 +170,7 @@
                                     </a>
                                     <ul class="sub-menu">
                                         <li class="menu-item kaycee-MyAccount-navigation-link kaycee-MyAccount-navigation-link--dashboard is-active">
-                                            <a href="#">Dashboard</a>
+                                            <a href="/dashboard">Dashboard</a>
                                         </li>
                                         <!-- <li class="menu-item kaycee-MyAccount-navigation-link kaycee-MyAccount-navigation-link--orders">
                                             <a href="#">Order Status</a>
