--- a/views/index.ejs
+++ b/views/index.ejs
@@ -162,7 +162,7 @@
                                     <span class="onnew"><span class="text">New</span></span></div> -->
                                 <div class="group-button">
                                     <div class="add-to-cart">
-                                        <a href="#"  data-id="<%= item._id %>" class="button product_type_simple add_to_cart_button addToCart">Add to
+                                        <a href="/product/<%= item._id %>"  data-id="<%= item._id %>" class="button product_type_simple add_to_cart_button ">Add to
                                             cart</a>
                                     </div>
                                 </div>
@@ -183,7 +183,7 @@
                             <div class="group-button">
                                 <div class="group-button-inner">
                                     <div class="add-to-cart">
-                                        <a href="#" class="button product_type_variable add_to_cart_button">Add to cart</a>
+                                        <a href="/product/<%= item._id %>" class="button product_type_variable add_to_cart_button">Add to cart</a>
                                     </div>
                                 </div>
                             </div>
@@ -347,7 +347,7 @@
                                     
                                     
                                     <div class="add-to-cart">
-                                        <a href="#" data-id="<%= item._id %>" class="button product_type_simple add_to_cart_button addToCart">Add to
+                                        <a href="/product/<%= item._id %>" data-id="<%= item._id %>" class="button product_type_simple add_to_cart_button">Add to
                                             cart</a>
                                     </div>
                                 </div>
@@ -611,23 +611,23 @@
 <script src="/assets/js/mobilemenu.js"></script>
 <script src="/assets/js/functions.js"></script>
 <script>
-    $(document).ready(function() {
+    // $(document).ready(function() {
            
         
-            $('.addToCart').click(function(event){
-                event.preventDefault();
-                // console.log($(this).attr("data-id"))
-                $.ajax({
-                    type: "POST",
-                    url: window.location.origin + "/api/add-to-cart",
-                    data: {productId:$(this).attr("data-id")},
-                    success: ()=>{
-                        // alert($(this).attr("data-id"))
-                        location.reload();
-                    },
-                    });
-            })
-        });
+    //         $('.addToCart').click(function(event){
+    //             event.preventDefault();
+    //             // console.log($(this).attr("data-id"))
+    //             $.ajax({
+    //                 type: "POST",
+    //                 url: window.location.origin + "/api/add-to-cart",
+    //                 data: {productId:$(this).attr("data-id")},
+    //                 success: ()=>{
+    //                     // alert($(this).attr("data-id"))
+    //                     location.reload();
+    //                 },
+    //                 });
+    //         })
+    //     });
     
     
 
