--- a/views/product.ejs
+++ b/views/product.ejs
@@ -103,49 +103,30 @@
                                     </ul> -->
                                 </div>
                                 
-                                <form class="variations_form cart">
-                                    <% if (product.charm) { %>
-                                        <label for="">Sizes</label>
+                                <form  class="variations_form cart">
+                                    
+                                    
+                                        <label for="">Size (in cms)</label>
                                     &nbsp
                                     <label>
-                                        <select class="option-perpage">
-                                            <option value="12" selected="">
-                                                Show 12
-                                            </option>
-                                            <option value="5">
-                                                Show 05
-                                            </option>
-                                            <option value="10">
-                                                Show 10
-                                            </option>
-                                            <option value="12">
-                                                Show 12
-                                            </option>
-                                            <option value="15">
-                                                Show 15
-                                            </option>
-                                            <option value="20">
-                                                Show All
-                                            </option>
-                                        </select>
+                                        <input class="size-input" type="text" name="size" id="" style="width: 50%;">
                                     </label>
+                                    <!-- &nbsp;
                                     &nbsp;
                                     &nbsp;
-                                    &nbsp;
-                                    &nbsp;
+                                    &nbsp; -->
+                                    <br>
+                                    <% if (product.charms && product.charms.length>0) { %>
                                     <label for="">Charm Options</label>
                                     &nbsp;
                                    
                                     <label>
-                                        <select class="option-perpage charm-option">
-                                            <% product.charms.forEach(element => { %>
-                                                <!-- <option value="" selected disabled>Choose Charm</option> -->
-                                                <option value="<%= element.name %>">
-                                                    <%= element.name %>   
-                                                </option>
-                                            <% }) %>
-                                           
-                                            
+                                        <select class="option-perpage charm-input" name="charm">
+                                            <% product.charms.map(charm=>{ %>
+                                            <option value="<%= charm %>" selected="">
+                                                <%= charm %>
+                                            </option>
+                                        <% }) %>
                                         </select>
                                     </label>
                                     <br><br>
@@ -153,14 +134,6 @@
                                     <div class="single_variation_wrap">
                                         <div class="kaycee-variation single_variation"></div>
                                         <div class="kaycee-variation-add-to-cart variations_button ">
-                                            <!-- <div class="quantity">
-                                                <span class="qty-label">Quantiy:</span>
-                                                <div class="control">
-                                                    <a class="btn-number qtyminus quantity-minus" href="#">-</a>
-                                                    <input type="text" data-step="1" min="0" max="" name="quantity[25]" value="0" title="Qty" class="input-qty input-text qty text" size="4" pattern="[0-9]*" inputmode="numeric">
-                                                    <a class="btn-number qtyplus quantity-plus" href="#">+</a>
-                                                </div>
-                                            </div> -->
                                             <button type="submit" data-id="<%= product._id %>"
                                                     class="single_add_to_cart_button button alt kaycee-variation-selection-needed addToCart">
                                                 Add to cart
@@ -342,13 +315,14 @@
                                          src="/assets/images/apro1211-2-600x778.jpg"
                                          alt="Gold Bracelet" width="600" height="778">
                                 </a>
-                                <!-- <div class="flash">
-                                    <span class="onsale"><span class="number">-14%</span></span>
-                                    <span class="onnew"><span class="text">New</span></span></div> -->
+                                <div class="flash">
+                                    <% if (item.charms && item.charms.length>0) { %>
+                                        <span class="onsale"><span class="text">With Charm</span></span>
+                                        <% } %>
+                                </div>
                                 <div class="group-button">
                                     <div class="add-to-cart">
-                                        <a href="#"  data-id="<%= item._id %>" class="button product_type_simple add_to_cart_button addToCart">Add to
-                                            cart</a>
+                                        <a href="#"  data-id="<%= item._id %>" class="button product_type_simple add_to_cart_button ">Add to cart</a>
                                     </div>
                                 </div>
                             </div>
@@ -405,11 +379,32 @@
         
             $('.addToCart').click(function(event){
                 event.preventDefault();
-                // console.log($(this).attr("data-id"))
+                let size = $('.size-input').val()
+                
+                
+                // Check if the input is empty
+                if (size === '') {
+                // Add a red border
+                $('.size-input').css('border', '1px solid red');
+                
+                // Add a tooltip
+                $('.size-input').attr('title', 'This field is required');
+                return
+            }
+
+                let charm=$('.charm-input').val()
+                let data
+                if(charm !== undefined){
+                    data = {productId:$(this).attr("data-id"), size, charm}
+                }else{
+                    data = {productId:$(this).attr("data-id"), size}
+                }
+                console.log(data)
+                console.log($(this).attr("data-id"))
                 $.ajax({
                     type: "POST",
                     url: window.location.origin + "/api/add-to-cart",
-                    data: {productId:$(this).attr("data-id")},
+                    data: {productId:$(this).attr("data-id"), size, charm},
                     success: ()=>{
                         // alert($(this).attr("data-id"))
                         location.reload();
